# finance_ml

./: C1 - TP3_BS  C1-TP4_Extension_df.py  C1-TP5_EXTENSION_LISTE  C1-Tp6_DUNDER_TENSOR  C2-TP7_POLYPHORMISME.PY  C2-TP7_POLYPHORMISME_part2.PY  C3-TP8-MONTECARLO.PY  Exercice_dau.sln  pyproject.toml  test.py  test_1.py
finance_ml/: pyproject.toml
finance_ml/tests/: test_linear_models.py
src/finance_ml/: linear_models.py
tests/: test_linear_models.py
